--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 23
+          node-version: '23'
 
       - name: Cache npm dependencies
         uses: actions/cache@v3
@@ -28,8 +28,11 @@ jobs:
             ${{ runner.os }}-npm-${{ inputs.app-name }}
 
       - name: Install dependencies
-        run: npm install
-        cache: npm
+        run: |
+          cd ${{ inputs.app-name }}
+          npm install
 
       - name: Run tests
-        run: cd ${{ inputs.app-name }} && npm test
+        run: |
+          cd ${{ inputs.app-name }}
+          npm test
