--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Check if the file exists
+        run: |
+          echo "Listing files in .github/actions:"
+          ls -R .github/actions
+
       - name: Run unit tests for ${{ matrix.instance.app-name }}
         uses: ./.github/actions/unit-tests.yml
         with:
