--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,6 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Run unit tests for ${{ matrix.instance.app-name }}
-        uses: ./.github/actions/unit-tests/action.yml
+        uses: ./.github/actions/unit-tests
         with:
           app-name: ${{ matrix.instance.app-name }}
