chore: convert to a composite action file

--- a/.github/actions/unit-tests/action.yml
+++ b/.github/actions/unit-tests/action.yml
@@ -30,7 +30,7 @@ runs:
     - name: Install dependencies
       run: |
         cd ${{ inputs.app-name }}
-        npm install
+        npm install --legacy-peer-deps
       shell: bash
 
     - name: Run tests
