--- a/.github/actions/docker-image/action.yml
+++ b/.github/actions/docker-image/action.yml
@@ -28,8 +28,8 @@ runs:
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+        username: ${{ inputs.dockerhub-username }}
+        password: ${{ inputs.dockerhub-token }}
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
@@ -49,5 +49,5 @@ runs:
         file: ./Dockerfile
         push: true
         tags: |
-          ${{ secrets.DOCKERHUB_USERNAME }}/${{ inputs.app-name }}:${{ inputs.sha_short }}
-          ${{ secrets.DOCKERHUB_USERNAME }}/${{ inputs.app-name }}:latest
+          ${{ inputs.dockerhub-username }}/${{ inputs.app-name }}:${{ inputs.sha_short }}
+          ${{ inputs.dockerhub-username }}/${{ inputs.app-name }}:latest
