--- a/.github/actions/docker-image/action.yml
+++ b/.github/actions/docker-image/action.yml
@@ -42,14 +42,10 @@ runs:
         restore-keys: |
           ${{ runner.os }}-buildx-
 
-    - name: List directory contents
-      run: ls -la ./${{ inputs.app-name }}
-      shell: bash
-
     - name: Build and push Docker image
       uses: docker/build-push-action@v5
       with:
-        context: ./${{ inputs.app-name }}
+        context: ./${{ inputs.app-name }}/Dockerfile
         file: Dockerfile
         push: true
         tags: |
