--- a/.github/actions/docker-image/action.yml
+++ b/.github/actions/docker-image/action.yml
@@ -19,6 +19,9 @@ inputs:
 runs:
   using: 'composite'
   steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
     - name: Get short SHA
       id: vars
       run: |
