--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,13 +7,15 @@ on:
       - main  
 
 jobs:
-  matrix:
+  build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         instance:
           - app-name: frontend
+            dockerhub-repo: nng-frontend
           - app-name: backend
+            dockerhub-repo: nng-backend
 
     steps:
       - name: Checkout repository
@@ -30,3 +32,24 @@ jobs:
           app-name: ${{ matrix.instance.app-name }}
           dockerhub-username: ${{ secrets.DOCKERHUB_USERNAME }}
           dockerhub-token: ${{ secrets.DOCKERHUB_TOKEN }}
+          dockerhub-repo: ${{ matrix.instance.dockerhub-repo }}
+
+  deploy-gcp:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy
+        uses: ./.github/actions/deploy-gcp
+        with:
+          app-name: frontend
+          gcp-project: nng-webapp-template
+          gcp-region: us-central1
+          gcp-sa-key: ${{ secrets.GCP_SA_KEY }}
+          dockerhub-repo: ${{ secrets.DOCKERHUB_USERNAME }}/nng-frontend
+
+  # deploy-vercel:
+  #   runs-on: ubuntu-latest
+  #   needs: build
+  #   steps:
+  #     - name: Deploy
+  #       uses: ./.github/actions/deploy-vercel
