chore: convert to a composite action file

--- a/.github/actions/deploy-gcp/action.yaml
+++ b/.github/actions/deploy-gcp/action.yaml
@@ -53,6 +53,7 @@ runs:
     - name: Deploy to Cloud Run
       run: |
         gcloud config set account ${{ inputs.gcp-sa }}
+        gcloud auth activate-service-account ${{ inputs.gcp-sa }}
 
         gcloud run deploy ${{ inputs.app-name }} \
           --image docker.io/${{ inputs.dockerhub-repo }}:${{ steps.vars.outputs.sha_short }} \
