--- a/.github/actions/deploy-gcp/action.yaml
+++ b/.github/actions/deploy-gcp/action.yaml
@@ -40,20 +40,21 @@ runs:
         echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
       shell: bash
 
-    - name: Deploy
-      run: echo "Deploying to GCP"
-      shell: bash
+    - name: Set up Google Cloud authentication
+      run: |
+        echo "${{ secrets.GCP_SA_KEY }}" > /tmp/key.json
+        export GOOGLE_APPLICATION_CREDENTIALS=/tmp/key.json
+      env:
+        GOOGLE_APPLICATION_CREDENTIALS: /tmp/key.json
 
-    - name: Set up GCP credentials
-      uses: google-github-actions/setup-gcloud@v2
+    - name: Authenticate with Google Cloud
+      uses: google-github-actions/auth@v1
       with:
-        project_id: ${{ inputs.gcp-project }}
-        service_account_key: ${{ inputs.gcp-sa-key }}
+        credentials_json: '${{ secrets.GCP_SA_KEY }}'
 
     - name: Deploy to Cloud Run
       run: |
-        gcloud config set account ${{ inputs.gcp-sa }}
-        gcloud auth activate-service-account ${{ inputs.gcp-sa }}
+        gcloud auth activate-service-account --key-file=/tmp/key.json
 
         gcloud run deploy ${{ inputs.app-name }} \
           --image docker.io/${{ inputs.dockerhub-repo }}:${{ steps.vars.outputs.sha_short }} \
