--- a/.github/actions/deploy-gcp/action.yaml
+++ b/.github/actions/deploy-gcp/action.yaml
@@ -42,7 +42,7 @@ runs:
 
     - name: Set up Google Cloud authentication
       run: |
-        echo "${{ secrets.GCP_SA_KEY }}" > /tmp/key.json
+        echo "${{ inputs.gcp-sa-key }}" > /tmp/key.json
         export GOOGLE_APPLICATION_CREDENTIALS=/tmp/key.json
       env:
         GOOGLE_APPLICATION_CREDENTIALS: /tmp/key.json
@@ -51,7 +51,7 @@ runs:
     - name: Authenticate with Google Cloud
       uses: google-github-actions/auth@v1
       with:
-        credentials_json: '${{ secrets.GCP_SA_KEY }}'
+        credentials_json: '${{ inputs.gcp-sa-key }}'
 
     - name: Deploy to Cloud Run
       run: |
