chore: convert to a composite action file

--- a/.github/actions/deploy-gcp/action.yaml
+++ b/.github/actions/deploy-gcp/action.yaml
@@ -56,5 +56,6 @@ runs:
           --memory 1Gi \
           --cpu 1 \
           --port 8000 \
-          --allow-unauthenticated
+          --allow-unauthenticated \
+          --command "npm run start"
       shell: bash
