chore: convert to a composite action file

--- a/.github/actions/deploy-gcp/action.yaml
+++ b/.github/actions/deploy-gcp/action.yaml
@@ -57,5 +57,5 @@ runs:
           --cpu 1 \
           --port 8000 \
           --allow-unauthenticated \
-          --command "npm run start"
+          --command npm run start
       shell: bash
