--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,4 +55,5 @@ jobs:
     # needs: deploy-gcp
     steps:
       - name: Deploy
+        uses: actions/checkout@v3
         uses: ./.github/actions/deploy-vercel
