--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,6 +54,8 @@ jobs:
     runs-on: ubuntu-latest
     # needs: deploy-gcp
     steps:
-      - name: Deploy
+      - name: Checkout repository
         uses: actions/checkout@v3
+
+      - name: Deploy
         uses: ./.github/actions/deploy-vercel
