--- a/.github/actions/deploy-vercel/action.yml
+++ b/.github/actions/deploy-vercel/action.yml
@@ -46,5 +46,5 @@ runs:
     - name: Deploy to Vercel
       run: |
         cd ${{ inputs.app-name }}
-        npx vercel --prod --token ${{ inputs.vercel-token }}
+        npx vercel --prod --token ${{ inputs.vercel-token }} --yes
       shell: bash 
