chore: convert to a composite action file

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,9 @@
     "axios": "^1.7.9",
     "faker": "^6.6.6",
     "jest-environment-jsdom": "^29.7.0",
-    "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "next": "^15.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tsconfig-paths-jest": "^0.0.1"
   },
   "devDependencies": {
