--- a/.github/actions/deploy-vercel/action.yml
+++ b/.github/actions/deploy-vercel/action.yml
@@ -11,6 +11,10 @@ inputs:
     description: 'The Vercel token'
     required: true
     type: string
+  api-url:
+    description: 'The API URL'
+    required: true
+    type: string
 
 runs:
   using: 'composite'
@@ -34,7 +38,7 @@ runs:
     - name: Install dependencies
       run: |
         cd ${{ inputs.app-name }}
-        npm install --legacy-peer-deps
+        npm install
       shell: bash
 
     - name: Build project
@@ -46,5 +50,5 @@ runs:
     - name: Deploy to Vercel
       run: |
         cd ${{ inputs.app-name }}
-        npx vercel --prod --token ${{ inputs.vercel-token }} --yes
+        npx vercel --prod --token ${{ inputs.vercel-token }} --yes --env API_URL=${{ inputs.api-url }}
       shell: bash 
